[gd_scene load_steps=18 format=3 uid="uid://q2q6jah3nxnt"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_o5co6"]
[ext_resource type="Shader" path="res://shaders/2d_outline.gdshader" id="1_o8y34"]
[ext_resource type="Texture2D" uid="uid://bfsyarpdy34qi" path="res://assets/Monkey2.png" id="2_65p4k"]
[ext_resource type="AudioStream" uid="uid://1te3x7m0ay1x" path="res://sounds/Game/Explosion.wav" id="3_ab4ko"]
[ext_resource type="Texture2D" uid="uid://dsd8ngoavh6c3" path="res://assets/Monkey 2.png" id="3_sodm1"]
[ext_resource type="PackedScene" uid="uid://ucocyvri64wq" path="res://scenes/ShadowCast.tscn" id="4_2bnyq"]
[ext_resource type="Texture2D" uid="uid://s0jo1s848tvq" path="res://assets/Monkey3.png" id="5_rirod"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6mssy"]
shader = ExtResource("1_o8y34")
shader_parameter/width = 1
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/flickering_speed = null
shader_parameter/minimal_flickering_alpha = 0.9

[sub_resource type="AtlasTexture" id="AtlasTexture_r5ity"]
atlas = ExtResource("2_65p4k")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_74abm"]
atlas = ExtResource("3_sodm1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_yudvl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5ity")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74abm")
}, {
"duration": 1.0,
"texture": ExtResource("5_rirod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74abm")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mjnxd"]
size = Vector2(12, 8.5)

[sub_resource type="Animation" id="Animation_xwuxk"]
length = 0.001

[sub_resource type="Animation" id="Animation_pca0b"]
resource_name = "hit"

[sub_resource type="Animation" id="Animation_bxg8w"]
resource_name = "walk"
length = 0.8
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h1ccq"]
_data = {
"RESET": SubResource("Animation_xwuxk"),
"hit": SubResource("Animation_pca0b"),
"walk": SubResource("Animation_bxg8w")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ymuc0"]
size = Vector2(14.5, 11)

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
z_index = 2
position = Vector2(0, -13)
script = ExtResource("1_o5co6")
score_value = 100
hp = 4
top_speed = 120.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_6mssy")
position = Vector2(0, -10)
rotation = 3.14159
scale = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_yudvl")
autoplay = "default"
frame_progress = 0.549706

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-11, 9.5)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_mjnxd")

[node name="Animator" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_h1ccq")
}

[node name="HitAnimator" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_h1ccq")
}

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_ab4ko")
bus = &"SoundFX"

[node name="EnemyCollision" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 6)
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCollision"]
position = Vector2(-5.75, 2)
shape = SubResource("RectangleShape2D_ymuc0")

[node name="ShadowCast" parent="." instance=ExtResource("4_2bnyq")]
position = Vector2(-12, 15)

[connection signal="body_entered" from="EnemyCollision" to="." method="_on_enemy_collision_body_entered"]
